--- a/data/README
+++ b/data/README
@@ -1,1 +1,4 @@
 This is the folder of data
+
+The data from MIMIC database can be obtained from this link:
+https://physionet.org/content/mimic-cxr/2.0.0/#files
