--- a/code/UCI_diabetes.ipynb
+++ b/code/UCI_diabetes.ipynb
@@ -231,8 +231,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/diabetic_data.csv')\n",
-    "df.head()"
+    "df = pd.read_csv('../data/diabetic_data.csv')\n"
    ]
   },
   {
@@ -365,236 +364,6 @@
    ],
    "source": [
     "df_diabetes.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>encounter_id</th>\n",
-       "      <th>patient_nbr</th>\n",
-       "      <th>race</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>age</th>\n",
-       "      <th>admission_type_id</th>\n",
-       "      <th>discharge_disposition_id</th>\n",
-       "      <th>admission_source_id</th>\n",
-       "      <th>time_in_hospital</th>\n",
-       "      <th>num_lab_procedures</th>\n",
-       "      <th>...</th>\n",
-       "      <th>citoglipton</th>\n",
-       "      <th>insulin</th>\n",
-       "      <th>glyburide-metformin</th>\n",
-       "      <th>glipizide-metformin</th>\n",
-       "      <th>glimepiride-pioglitazone</th>\n",
-       "      <th>metformin-rosiglitazone</th>\n",
-       "      <th>metformin-pioglitazone</th>\n",
-       "      <th>change</th>\n",
-       "      <th>diabetesMed</th>\n",
-       "      <th>readmitted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2278392</td>\n",
-       "      <td>8222157</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>[0-10)</td>\n",
-       "      <td>6</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>41</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>NO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>28236</td>\n",
-       "      <td>89869032</td>\n",
-       "      <td>AfricanAmerican</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>[40-50)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>52</td>\n",
-       "      <td>590346</td>\n",
-       "      <td>37746639</td>\n",
-       "      <td>AfricanAmerican</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>[40-50)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>55</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56</td>\n",
-       "      <td>630342</td>\n",
-       "      <td>93232917</td>\n",
-       "      <td>AfricanAmerican</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>[50-60)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>37</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>60</td>\n",
-       "      <td>676422</td>\n",
-       "      <td>63754317</td>\n",
-       "      <td>AfricanAmerican</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>[70-80)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>48</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Steady</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>&gt;30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 47 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    encounter_id  patient_nbr             race  gender      age  \\\n",
-       "0        2278392      8222157        Caucasian  Female   [0-10)   \n",
-       "10         28236     89869032  AfricanAmerican  Female  [40-50)   \n",
-       "52        590346     37746639  AfricanAmerican  Female  [40-50)   \n",
-       "56        630342     93232917  AfricanAmerican  Female  [50-60)   \n",
-       "60        676422     63754317  AfricanAmerican  Female  [70-80)   \n",
-       "\n",
-       "    admission_type_id  discharge_disposition_id  admission_source_id  \\\n",
-       "0                   6                        25                    1   \n",
-       "10                  1                         1                    7   \n",
-       "52                  1                         6                    7   \n",
-       "56                  3                         6                    2   \n",
-       "60                  1                         1                    7   \n",
-       "\n",
-       "    time_in_hospital  num_lab_procedures  ...  citoglipton  insulin  \\\n",
-       "0                  1                  41  ...           No       No   \n",
-       "10                 9                  47  ...           No   Steady   \n",
-       "52                 8                  55  ...           No   Steady   \n",
-       "56                 9                  37  ...           No   Steady   \n",
-       "60                 4                  48  ...           No   Steady   \n",
-       "\n",
-       "    glyburide-metformin  glipizide-metformin  glimepiride-pioglitazone  \\\n",
-       "0                    No                   No                        No   \n",
-       "10                   No                   No                        No   \n",
-       "52                   No                   No                        No   \n",
-       "56                   No                   No                        No   \n",
-       "60                   No                   No                        No   \n",
-       "\n",
-       "   metformin-rosiglitazone metformin-pioglitazone change  diabetesMed  \\\n",
-       "0                       No                     No     No           No   \n",
-       "10                      No                     No     No          Yes   \n",
-       "52                      No                     No     No          Yes   \n",
-       "56                      No                     No     No          Yes   \n",
-       "60                      No                     No     No          Yes   \n",
-       "\n",
-       "   readmitted  \n",
-       "0          NO  \n",
-       "10        >30  \n",
-       "52        >30  \n",
-       "56        >30  \n",
-       "60        >30  \n",
-       "\n",
-       "[5 rows x 47 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_diabetes.head()"
    ]
   },
   {
